--- a/sass/contact.sass
+++ b/sass/contact.sass
@@ -15,6 +15,7 @@
     grid-template-columns: 1fr
     font-size: 1.4rem
     max-width: 720px
+    column-gap: 20px
 
   &_subtitle
     color: $mcolor1
